<resources>
    <string name="app_name">Ресурси Агапе</string>
    <!-- colorScheme -->
    <string name="colorScheme1">https://colorscheme.ru/#3bj1Tw0w0w0w0</string>
    <string name="colorScheme2">https://colorscheme.ru/#0Ok1Tw0w0w0w0</string>
    <string name="colorScheme3">https://colorscheme.ru/#1lk1Tw0w0w0w0</string>
    <string name="turquoiseScheme4">https://colorscheme.ru/#3m11TlZ--w0w0</string>
    <string name="orgScheme">https://colorscheme.ru/#0011T00ttGTVY</string>

    <!-- keys API -->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_header">вхід / реєстрація</string>
    <string name="login">Логін</string>
    <string name="password">Пароль</string>
    <string name="info">*Ви - гість, якщо Ви зареєстровані - заповніть поля нижче</string>
    <string name="search_title">Пошук</string>
    <string name="filter_title">Фільтр</string>
    <string name="lessons_label">Уроки</string>
    <string name="articles_label">Статті</string>
    <string name="account_label">Кабінет</string>
    <string name="package_title">Назва</string>
    <string name="package_description">Опис</string>
    <string name="home_label">На головну|reboot</string>
    <string name="btn_continue">Продовжити</string>
    <string name="projects_label">Проекти</string>
    <string name="news_label">Новини</string>
    <string name="resources_label">Ресурси</string>
    <string name="video_label">Відео</string>
    <string name="news_text">Зміст статті</string>
    <string name="lesson_text">Зміст уроку</string>
    <string name="first_year">1-й рік навчання</string>
    <string name="second_year">2-й рік навчання</string>
    <string name="lesson_number">Номер</string>
    <string name="last_news">Останні новини</string>
</resources>
