<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Agape.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/lessons_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Agape.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/articles_label" />

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?attr/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Agape.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/account_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Agape.Button.TextButton"
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/home_label" />

</merge>