<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/lesson_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="?attr/colorPrimaryDark"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lesson_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lesson_number"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <TextView
                    android:id="@+id/lesson_separator_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=". "
                    android:textAppearance="?attr/textAppearanceBody1"/>

                <TextView
                    android:id="@+id/lesson_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/package_title"
                    android:textAppearance="?attr/textAppearanceBody1" />
            </LinearLayout>

            <TextView
                android:id="@+id/lesson_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_text"
                android:textAppearance="?attr/textAppearanceBody2" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>